--- a/final_report/final.tex
+++ b/final_report/final.tex
@@ -189,7 +189,7 @@ This includes a unique \emph{responder\_id} for the primary key, a student's \em
 Additional demographic information is also stored for each student: their \emph{gender}, \emph{race}, \emph{ethnicity}, their free or reduced \emph{lunch\_status}, and the \emph{highest\_education} level their parent(s) or guardian(s) received.
 
 The Admin table contains information for administrative users to login to the website.
-This information consists of a unqiue \emph{admin\_id}, their \emph{first\_name} and \emph{last\_name), and their \emph{user\_name} and \emph{password}.
+This information consists of a unqiue \emph{admin\_id}, their \emph{first\_name} and \emph{last\_name}, and their \emph{user\_name} and \emph{password}.
 
 The Question table stores frequently used questions.
 It stores a \emph{question\_id} (separate from the \emph{Q\_id} used in JSON representations of surveys and questions), the \emph{type} of the question (i.e. "text" or "matrix"), and the \emph{obj\_string} which stores a question's JSON representation as a string.
@@ -198,7 +198,7 @@ The Report able is used for saving reports STEM Academy might reuse.
 Reports are stored with a \emph{report\_id}, a \emph{title}, and the results JSON object stored as a string in \emph{arr\_results}.
 
 Lastly, the Response table stores individuals' responses to surveys.
-This is stored wtih a \emph{camp\_id}, \emph{responder\_id}, and a \emph{survey\_id} to reference the associated camp, survey, and student, their JSON object for their \emph{answers} represented as a string, and the \emph{survey\_type).
+This is stored wtih a \emph{camp\_id}, \emph{responder\_id}, and a \emph{survey\_id} to reference the associated camp, survey, and student, their JSON object for their \emph{answers} represented as a string, and the \emph{survey\_type}.
 \subsubsection{ER Diagram of Database}
 \subsection{Report Generation}
 
