completed what learned section

--- a/final_report/final.tex
+++ b/final_report/final.tex
@@ -214,7 +214,7 @@ Below is the order of usefulness of the websites:
 1.StackOverflow
 2.w3schools
 \subsection{What was Learned}
-\subsection{Shannon Ernst: Survey Generation}
+\subfile{sections/learned_ernst}
 \subsection{Kyle Nichols: Database Management}
 \subsection{Javier Franco: Report Generation}
 
