setting up old docs

--- a/final_report/final.tex
+++ b/final_report/final.tex
@@ -86,17 +86,20 @@ Throughout the process the clients, STEM Academy, provided feedback on their nee
 
 \section{Requirements Document}
 \subsection{Original Document}
-%\includepdf[pages={1-7}]{pdfs/requirements_document.pdf}
+\includepdf[pages={1-7}]{pdfs/requirements_document.pdf}
 %\subfile{sections/requirements_document}
+\includepdf[pages={1}]{pdfs/CS461Gantt.pdf}
 \subsection{Changes to the Document}
 \subsection{Gantt Chart Progression}
 
 \section{Design Document}
 \subsection{Original Document}
+\includepdf[pages={1-13}]{pdfs/design_doc.pdf}
 \subsection{Changes to the Document}
 
 \section{Technology Review Document}
 \subsection{Original Document}
+\includepdf[pages={1-13}]{pdfs/fall_final_tech_review.pdf}
 \subsection{Changes to the Document}
 
 \section{Weekly Blogs Over the Year}
@@ -105,7 +108,7 @@ Throughout the process the clients, STEM Academy, provided feedback on their nee
 \subfile{sections/spring_weekly_blogs}
 
 \section{Poster}
-
+\includepdf[pages={1}]{pdfs/Group48Poster_Draft2.pdf}
 \section{Documentation}
 The following sections describe how the STEM Academy Data Solution was implemented.
 The first section will cover the overall structure and usage of the web service before delving more deeply into each component in its own section.
