--- a/final_report/sections/learned_nichols.tex
+++ b/final_report/sections/learned_nichols.tex
@@ -3,7 +3,7 @@
 \begin{document}
 \subsection{Kyle Nichols: Database Management}
 Over the year, I primarily learned about working in a team more than the specific technology I worked with, though I did learn some new technical skills in web development.
-In the realm of teamwork, I learned a lot (or least solidified what I expected) about how to communicate as a team and work as a team to accomplish a larger project that you would be expected to do alone.
+In the realm of teamwork, I learned a lot (or least solidified what I expected) about how to communicate as a team and work as a team to accomplish a larger project that you would be not expected to do alone.
 Splitting tasks reasonably between the team, and in a way that is understanding of each team member's skills and expertise, takes an understanding of each person on that team.
 You have to learn the skills and work style of all of your team members if you expect to be productive and efficient.
 
@@ -11,7 +11,7 @@ On the topic of technical skills, my web development experience was minimal goin
 Taking charge of the database management aspect was at least in part intentional because my skills in web development primarily consisted of database interaction.
 However, I often had to help my teammates and I picked up an understanding of JavaScript through this (which was in turn solidified when I took a web development course in my spring term and then had to dive deeper in the JavaScript code for our project in the spring term).
 I learned a lot about how to pass data between HTML and PHP through JavaScript, as well as the importance of modularizing work into functions for specific tasks.
-Sometimes mutliple buttons and database functionality existed on one page, and modularizing the JavaScript helped make sure that those calls were specific and succinct.
+Sometimes mutliple buttons and database functionalities existed on one page, and modularizing the JavaScript helped make sure that those calls were specific and succinct.
 I knew the cleanliness of code was important before, but especially as I've gotten less clean in small-scale class assignments over the years, having a large project like this really helped me see the benefits of neat code.
 
 If I had the chance to do this all over again, I would probably make sure to communicate a little more with my team, but primarily, I would spend more time testing.
