--- a/final_report/sections/techreview_changes.tex
+++ b/final_report/sections/techreview_changes.tex
@@ -3,4 +3,4 @@
 One change to the technology utilized in our system was the survey distribution.
 In regards to distributing surveys, we decided it was unnecessary to find a system to distribute them since the surveys would ultimately be taken through the website during camps.
 Students who enter our website are given access to the survey based on the current camp they select.
-Due to this direct access, a distribution service, such as email through mail, was unnecessary.
+Due to this direct access, a distribution service, such as through email, was unnecessary.
